# ros-repo-3

./: README.md  bubbly-waddling-whistle.md  sac_actor.onnx  update_onnx.py  update_onnx_all.py
RL_Book/: export_onnx.py  main.py  requirements.txt
RL_Book/agents/: __init__.py  base.py
RL_Book/agents/dreamer/: dreamer.py  dreamer_actor.py  dreamer_learner.py  dreamer_networks.py
RL_Book/agents/sac/: __init__.py  sac.py  sac_learner.py  sac_network.py
RL_Book/config/agents/dreamer/: PinkyPro-v0.yaml
RL_Book/datasets/: episode_replay_buffer.py
RL_Book/docs/: onnx_deployment_plan.md
RL_Book/envs/: __init__.py  pinky_dreamer_env.py  pinky_env.py  pinky_rppo_env.py  pinky_sac_env.py
RL_Book/models/: model.py  sac_actor.onnx
RL_Book/runner/: dreamer_runner.py  environment_loop.py  multienv_runner.py  runner.py
docs/: ai_code_reflection.md  current_navigation_algorithm.md  phase4_10_gui_bug_fix_report.md  phase4_11_multirobot_migration_update_guide.md  phase4_8_final_integration_report.md  phase4_8_fix_report_2nd.md  phase4_8_remaining_impl_report.md  phase4_8_review_report.md  phase4_9_gui_and_sensor_fix_report.md  phase5_astar_path_visualization_report.md  phase5_bugfix_report.md  phase5_camera_and_nav_update_report.md  phase5_ekf_and_slam_migration_report.md  phase5_hybrid_nav_optimization_guide.md  phase5_map_and_nav_fix_report.md  phase5_mapless_nav_bugfix_report.md  phase5_multirobot_architecture_and_zmq_guide.md  phase5_nav_debug_enhancement_report.md  phase5_nav_refactor_report.md  run_guide.md
pinky_core/: CMakeLists.txt  README.md  pyproject.toml
pinky_core/config/: rl_config.yaml  robot_config.yaml
pinky_core/proto/: pinky.proto
pinky_core/src/app/: config_loader.cpp  main.cpp  robot_app.cpp
pinky_core/src/common/: logger.cpp
pinky_core/src/core/: battery_monitor.cpp  diff_drive.cpp  emotion_renderer.cpp  led_controller.cpp  lidar_processor.cpp  odometry.cpp  sensor_fusion.cpp
pinky_core/src/hal/: adc_sensor.cpp  bno055_imu.cpp  dynamixel_motor.cpp  ili9341_lcd.cpp  ipc_camera.cpp  opencv_camera.cpp  pinky_camera_server.py  rpicam_capture.cpp  sllidar_driver.cpp  ws2811_led.cpp
pinky_core/src/inference/: observation_builder.cpp  onnx_actor.cpp  rl_controller.cpp
pinky_core/src/net/: connection_manager.cpp  frame_sender.cpp  tcp_server.cpp  udp_server.cpp  zmq_server.cpp
pinky_core/src/protocol/: checksum.cpp  serializer.cpp
pinky_core/tests/: test_core.cpp  test_protocol.cpp
pinky_devices/WiringPi/: wiringpi_3.16_arm64.deb
pinky_devices/rpi_ws281x/rp1_ws281x_pwm/: .Module.symvers.cmd  .modules.order.cmd  .rp1_ws281x_pwm.mod.o.cmd  .rp1_ws281x_pwm.o.cmd  rp1_ws281x_pwm.dtbo  rp1_ws281x_pwm.ko  rp1_ws281x_pwm.mod  rp1_ws281x_pwm.mod.c
pinky_pro/: frames_2026-04-09_12.52.03.gv
pinky_pro/src/pinky_pro/pinky_bringup_cpp/: CMakeLists.txt  package.xml
pinky_pro/src/pinky_pro/pinky_bringup_cpp/launch/: bringup.launch.py
pinky_pro/src/pinky_pro/pinky_bringup_cpp/params/: ekf.yaml
pinky_pro/src/pinky_pro/pinky_bringup_cpp/src/: main_node.cpp
pinky_pro/src/pinky_pro/pinky_emotion_cpp/: CMakeLists.txt  package.xml
pinky_pro/src/pinky_pro/pinky_emotion_cpp/src/: main_node.cpp
pinky_pro/src/pinky_pro/pinky_led_cpp/: CMakeLists.txt  package.xml
pinky_pro/src/pinky_pro/pinky_led_cpp/src/: main_node.cpp
pinky_station/: requirements.txt  test_zmq_sub.py
pinky_station/config/: station_config.yaml
pinky_station/pinky_station/: config.py  main.py
pinky_station/pinky_station/core/: occupancy_grid.py  path_planner.py
pinky_station/pinky_station/gui/: main_window.py
pinky_station/pinky_station/net/: connection.py  tcp_client.py  udp_receiver.py  zmq_client.py
pinky_station/pinky_station/protocol/: checksum.py  message_types.py  serializer.py
pinky_station/pinky_station/workers/: __init__.py  camera_worker.py  command_worker.py  nav_worker.py  sensor_worker.py
pinky_station/tests/: conftest.py  test_gui_widgets.py  test_integration_loopback.py  test_network_loopback.py  test_protocol.py
(+199 files in other folders)
